--- a/conexo-clone/src/components/TelaInicial/Dialog/ListaDeJogos/ListaDeJogos.module.scss
+++ b/conexo-clone/src/components/TelaInicial/Dialog/ListaDeJogos/ListaDeJogos.module.scss
@@ -1,6 +1,6 @@
 .jogos {
 	display: flex;
-	width: 400px;
+	max-width: 400px;
 	flex-wrap: wrap;
 	justify-content: center;
 	gap: 10px;
@@ -12,4 +12,6 @@
 	align-items: center;
 	width: 3rem;
 	height: 3rem;
+	background-color: #1a1a1a;
+	color: #FFF;
 }
