Botão Limpar Storage
- Adicionando botão para limpar o localStorage

--- a/conexo-clone/src/components/TelaInicial/TelaInicial.module.scss
+++ b/conexo-clone/src/components/TelaInicial/TelaInicial.module.scss
@@ -18,4 +18,15 @@
 	img {
 		width: 100%;
 	}
+
+	.limpar_cache {
+		display: flex;
+		align-items: center;
+		position: relative;
+	}
+
+	.icone {
+		position: absolute;
+		right: -30px;
+	}
 }
