Atualizando "mensagem" de erro, rodapé e seleção de jogos
- Adicionado um ícone de X quando erra
- Adicionado cor diferente na seleção de jogos aos que já foram feitos
- Adicionado rodapé

--- a/conexo-clone/src/components/Jogo/Menu/Menu.module.scss
+++ b/conexo-clone/src/components/Jogo/Menu/Menu.module.scss
@@ -14,9 +14,11 @@
 .botao_voltar:hover {
 	background-color: grey;
 	border-radius: 16px;
+	cursor: pointer;
 }
 
 .botao_ajuda:hover {
 	background-color: grey;
 	border-radius: 16px;
+	cursor: pointer;
 }
