--- a/conexo-clone/src/components/Jogo/Jogo.module.scss
+++ b/conexo-clone/src/components/Jogo/Jogo.module.scss
@@ -23,11 +23,10 @@
 	background-color: #11bb1a;
 }
 
-.palavra:hover {
-	opacity: 0.7;
-}
-
-img {
-	margin-top: 100px;
-	width: 75%
+.icone_errado {
+	width: 40%;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
