--- a/conexo-clone/src/components/TelaInicial/Dialog/ListaDeJogos/ListaDeJogos.module.scss
+++ b/conexo-clone/src/components/TelaInicial/Dialog/ListaDeJogos/ListaDeJogos.module.scss
@@ -15,3 +15,12 @@
 	background-color: #1a1a1a;
 	color: #FFF;
 }
+
+.jogo_completo {
+	background-color: rgb(3, 88, 22);
+}
+
+.jogo_incompleto {
+	color: black;
+	background-color: orange;
+}
