Alterações imagem de erro e CSS
- Alterado imagem de erro (X)
- Quando um jogo é aberto, porém incompleto, ao voltar para o menu de jogos ele estará com outra cor
- Alterações de CSS para encaixar melhor o jogo e o rodapé na tela

--- a/conexo-clone/src/components/TelaInicial/Dialog/ListaDeJogos/ListaDeJogos.module.scss
+++ b/conexo-clone/src/components/TelaInicial/Dialog/ListaDeJogos/ListaDeJogos.module.scss
@@ -16,11 +16,15 @@
 	color: #FFF;
 }
 
+.jogo_completo,
+.jogo_incompleto {
+	color: black;
+}
+
 .jogo_completo {
-	background-color: rgb(3, 88, 22);
+	background-color: #008000
 }
 
 .jogo_incompleto {
-	color: black;
-	background-color: orange;
+	background-color: #FADE00;
 }
