--- a/conexo-clone/src/App.module.scss
+++ b/conexo-clone/src/App.module.scss
@@ -2,13 +2,13 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: center;
-	// width: 100vw;
-	// height: 100vh;
+	justify-content: space-between;
+	height: 100vh;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 500px) {
 	.app {
 		width: 100vw;
+		padding: 0 1rem;
 	}
 }
