--- a/conexo-clone/src/components/Jogo/Jogo.module.scss
+++ b/conexo-clone/src/components/Jogo/Jogo.module.scss
@@ -8,6 +8,7 @@
 .palavras {
 	display: flex;
 	width: 100%;
+	height: 360px;
 	flex-wrap: wrap;
 }
 
@@ -29,4 +30,17 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+}
+
+@media screen and (max-height: 619px) {
+	.palavras {
+		height: 320px;
+		margin-bottom: 30px;
+	}
+}
+
+@media screen and (max-width: 500px) {
+	.icone_errado {
+		width: 90%;
+	}
 }
