--- a/conexo-clone/src/components/Jogo/JogoCompleto/JogoCompleto.module.scss
+++ b/conexo-clone/src/components/Jogo/JogoCompleto/JogoCompleto.module.scss
@@ -3,11 +3,12 @@
 	flex-direction: column;
 	background-color: #1e293b;
 	text-align: center;
-	padding: 1.5rem;
+	padding: 1rem;
 	gap: 10px;
 	border-radius: 5px;
 
 	h1, p {
+		margin: 0;
 		font-size: 16px;
 	}
 }
